# hermes

./: .gitignore  CMakeLists.txt
backend/: .clang-format  .gitignore  CMakeLists.txt  README.md  binarySearch.cpp  binarySearch.h  boardingStatistics.cpp  boardingStatistics.h  csvLoader.h  csvLoaderTypes.h  endToEndEvaluator.cpp  endToEndEvaluator.h  gtfsTypes.cpp  gtfsTypes.h  lineRegister.cpp  lineRegister.h  main.cpp  people.cpp  people.h  person.cpp  personType.h  prox.cpp  prox.h  routing.cpp  routing.h  routingCacher.cpp  routingCacher.h  server.cpp  supermarket.cpp  supermarket.h  test.cpp  test.h
backend/gauss-kruger/: gausskruger.cpp  gausskruger.h
backend/hilbert/: hilbert.cpp  hilbert.h
backend/webServer/: CMakeLists.txt  routeTypes.cpp  routeTypes.h  sendLambda.h  webServer.cpp  webServer.h
frontend/: .eslintrc.cjs  .prettierrc.cjs  CMakeLists.txt  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: Controls.tsx  DetailInfo.tsx  InfoBox.tsx  Map.tsx  Menu.tsx  Sidebar.tsx
frontend/src/styles/: App.css  Controls.css  DetailInfo.css  InfoBox.css  Map.css  Menu.css  Sidebar.css
frontend/src/types/: ActiveArea.ts  Stop.ts
frontend/src/utils/: format.ts
